--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        // retrieve the shared gradle build scripts from here
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/"}
+    }
+    dependencies {
+        classpath 'com.barrybecker4:bb4-gradle:1.6-SNAPSHOT'
+    }
+}
+
 plugins {
     id "com.github.maiflai.scalatest" version "0.26" // needed to run scala tests
 }
@@ -9,10 +19,9 @@ ext {
     mainClass = 'com.barrybecker4.math.combinatorics.Combinator'
 }
 
-apply from: 'https://raw.githubusercontent.com/bb4/bb4-common/master/bb4.gradle'
+apply from: project.buildscript.classLoader.getResource('bb4.gradle').toURI()
 
 dependencies {
 }
 
-// This allows publishing of this project library to Sonatype
-apply from: 'https://raw.githubusercontent.com/bb4/bb4-common/master/bb4-publish.gradle'
+apply from: project.buildscript.classLoader.getResource('bb4-publish.gradle').toURI()
